Edit panel styling, fix padding on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@
 	}
 }
 
+.row{
+	padding-top: 1vh;
+}
 
 #checkCredsUser	 {
 	position: absolute;
